--- a/graduatetracer/tracer/templates/tracer/user/dashboard.html
+++ b/graduatetracer/tracer/templates/tracer/user/dashboard.html
@@ -7,10 +7,10 @@
   {% for announcement in announcements %}
 
   <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm">
-    <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-lite-green text-white">
+    <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-ads text-white">
       <div class="card-title">
         <div class="row">
-          <div class="col-11">
+          <div class="col-10">
             <div class="mr-auto">
               <div class="h4">
                 {{announcement.title}}
