--- a/graduatetracer/tracer/templates/tracer/admin/create_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/admin/create_user_management.html
@@ -138,298 +138,24 @@
   			}
   		}
 
-  		function School() {
-  		  var school = document.getElementById("id_school").value;
-
-  			if (school == "Argao Campus"){
-  				document.getElementById("id_argaoCampus").checked = true;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Barili Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = true;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Carmen Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = true;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Cebu City Mountain Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = true;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Daanbantayan Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = true;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Danao Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = true;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Dumanjug Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = true;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Ginatilan Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = true;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Main Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = true;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Moalboal Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = true;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Naga Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = true;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Oslob Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = true;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Pinamungajan Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = true;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "San Fernando Extension Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = true;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "San Francisco Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = true;
-  				document.getElementById("id_tuburanCampus").checked = false;
-
-  			}else if (school == "Tuburan Campus"){
-  				document.getElementById("id_argaoCampus").checked = false;
-  				document.getElementById("id_bariliCampus").checked = false;
-  				document.getElementById("id_carmenCampus").checked = false;
-  				document.getElementById("id_CCMECampus").checked = false;
-  				document.getElementById("id_daanbantayanCampus").checked = false;
-  				document.getElementById("id_danaoCampus").checked = false;
-  				document.getElementById("id_dumanjugExt").checked = false;
-  				document.getElementById("id_ginatilanExt").checked = false;
-  				document.getElementById("id_mainCampus").checked = false;
-  				document.getElementById("id_moalboalCampus").checked = false;
-  				document.getElementById("id_nagaExt").checked = false;
-  				document.getElementById("id_oslobExt").checked = false;
-  				document.getElementById("id_pinamungajanExt").checked = false;
-  				document.getElementById("id_sanfernandoExt").checked = false;
-  				document.getElementById("id_sanfranciscoCampus").checked = false;
-  				document.getElementById("id_tuburanCampus").checked = true;
-
-  			}
+      function School(){
+  		  var school = document.getElementById("school").value ;
+  		  const array_of_school = ["argaoCampus","bariliCampus","carmenCampus","CCMECampus","daanbantayanCampus","danaoCampus",
+  																"dumanjugExt", "dumanjugExt", "ginatilanExt","mainCampus","moalboalCampus","nagaExt",
+  																"oslobExt","pinamungajanExt","sanfernandoExt","sanfranciscoCampus","tuburanCampus",];
+  		  var i = 0;
+  			while(i != array_of_school.length){
+  		    	if(i != array_of_school.length){
+  		        	if(school == array_of_school[i]){
+  		            	document.getElementById(array_of_school[i]).checked = true;
+  		            }else{
+  		            	document.getElementById(array_of_school[i]).checked = false;
+  		            }
+  		            i++;
+  		        }else{
+  		        	i = 0;
+  		        }
+  		    }
   		}
 
   </script>
