--- a/graduatetracer/tracer/templates/tracer/adminreal/userinformations.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/userinformations.html
@@ -67,11 +67,7 @@
                       </div>
                       <div class="col-xm-12 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                           <p class="m-b-10 f-w-600">Status</p>
-                          {% if user_info.employed %}
-                          <h6 class="text-muted mby-1 f-w-400">Employed</h6>
-                          {% elif user_info.unemployed %}
-                          <h6 class="text-muted mby-1 f-w-400">Unemployed</h6>
-                          {% endif %}
+                          {{ user_info.employment_status }}
                       </div>
                       <div class="col-xm-12 col-sm-12 col-md-12 col-lg-12 col-xl-3">
                           <p class="m-b-10 f-w-600">Skill</p>
