--- a/graduatetracer/tracer/templates/tracer/user/JobExperience/EditExperience.html
+++ b/graduatetracer/tracer/templates/tracer/user/JobExperience/EditExperience.html
@@ -1,9 +1,9 @@
 {% extends 'tracer/user/template.html'%}
 {% load static %}
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-6">
   <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
@@ -14,9 +14,6 @@
               </li>
             </ol>
           </nav>
-        </div>
-        <div class="col-md-2">
-          <a href="{% url 'delete_experience' JobExperiences.id %}" class="btn btn-danger btn-sm">DELETE</a>
         </div>
   </div>
 
@@ -93,7 +90,7 @@
       <input
         type="submit"
         value="SAVE"
-        class="btn btn-primary btn-primary-sm"
+        class="btn btn-success btn-success-sm"
       />
     </form>
   </div>
