--- a/graduatetracer/tracer/templates/tracer/user/jobs_available.html
+++ b/graduatetracer/tracer/templates/tracer/user/jobs_available.html
@@ -144,7 +144,7 @@
                 {% endif %}
               </td>
               <td>{{ad.date_created|naturalday}}</td>
-              <td class="text-center"><a href="{% url 'view_ad' ad.id %}"><i class="fas fa-eye"></i></a></td>
+              <td class="text-center"><a href="{% url 'view_ads' ad.id %}"><i class="fas fa-eye"></i></a></td>
           </tr>
         {% endfor %}
       </tbody>
@@ -167,7 +167,7 @@
                 {% for job_category in job_categories %}
                   {% if job_category %}
                   <div class="col-lg-12 p-2">
-                    <a href="{% url 'categorized_jobs' job_category.id %}" class="btn btn-block btn-outline-info">{{job_category.title}}</a>
+                    <a href="{% url 'categorized_job' job_category.id %}" class="btn btn-block btn-outline-info">{{job_category.title}}</a>
                   </div>
                   {% else %}
                   <div class="card-body">
@@ -190,8 +190,7 @@
                   src="{% static 'img/browse.svg' %}" alt="Browse-Visualizer">
           </div>
           <p>This feature helps you to view all the
-            posted jobs from latest to oldest. Every post has an option of
-            <span class="text-info">Update</span> and <span class="text-danger">Delete</span>.</p>
+            posted jobs from latest to oldest.
         </div>
       </div>
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm d-none d-lg-block">
@@ -203,15 +202,15 @@
           <hr>
           <p>Advertised: <span class="text-info">{{count_jobs_advertised}}</span></p>
           <p>Job Request: <span class="text-warning">{{count_job_requests}}</span></p>
-          <p>Employed: <span class="text-success">{{count_employed}}</span></p>
-          <p>Unemployed: <span class="text-danger">{{count_unemployed}}</span></p>
+          <!-- <p>Employed: <span class="text-success">{{count_employed}}</span></p>
+          <p>Unemployed: <span class="text-danger">{{count_unemployed}}</span></p> -->
         </div>
       </div>
     </div>
     <div class="leftcolumn">
       {% for ad in ads %}
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm">
-        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-lite-green text-white">
+        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-ads text-white">
           <div class="card-title">
             <div class="row">
               <div class="col-11">
@@ -225,7 +224,7 @@
 
                 </div>
               </div>
-              <div class="ml-auto">
+              <!-- <div class="ml-auto">
                 <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -241,7 +240,7 @@
                         </form>
                     </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
