--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -3,32 +3,32 @@
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
-        <div class="sidebar-brand-icon">
-            <img class= "w3-round" src="{% static 'img/GradTracerLogo.png' %}" style="width: 85px; height:75px;"/>
-        </div>
+      <div class="sidebar-brand-icon">
+        <img class= "w3-round" src="{% static 'img/GradTracerLogo.png' %}" style="width: 85px; height:75px;">
+      </div>
     </a>
 
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-        <a class="nav-link" href="{% url 'DashboardUser' %}">
-            <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
-            <span>Dashboard</span></a>
+    <li class="nav-item">
+      <a class="nav-link" id="{% url 'DashboardUser' %}" href="{% url 'DashboardUser' %}">
+        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+        <span>Dashboard</span>
+      </a>
     </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider">
-
     <!-- Heading -->
-
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'available_jobs' %}">
-            <i class="fa fa-ad"></i>
-            <span>Jobs available</span></a>
+      <a class="nav-link" id="{% url 'available_jobs' %}" href="{% url 'available_jobs' %}">
+        <i id="jobs_available_icon" class="fa fa-ad"></i>
+        <span>Jobs available</span>
+      </a>
     </li>
 
     <!-- <li class="nav-item">
@@ -46,26 +46,31 @@
     </li> -->
 
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'HomeJobExperience' %}">
-          <i class="fas fa-user-edit"></i>
-          <span>Job Experiences</span></a>
+      <a class="nav-link" id="{% url 'HomeJobExperience' %}" href="{% url 'HomeJobExperience' %}">
+        <i id="job_experience_icon" class="fas fa-user-edit"></i>
+        <span>Job Experiences</span>
+      </a>
     </li>
-
-      <hr class="sidebar-divider">
-
-
-      <li class="nav-item">
-          <a class="nav-link" href="{% url 'post-list' %}">
-              <i class="fa fa-comments"></i>
-              <span>News Feeds</span>
-          </a>
-      </li>
-
-
 
     <hr class="sidebar-divider">
 
-       <li class="nav-item">
+    <li class="nav-item">
+      <a class="nav-link" id="{% url 'post-list' %}" href="{% url 'post-list' %}">
+        <i id="news_feed_icon" class="fa fa-comments"></i>
+        <span>News Feeds</span>
+      </a>
+    </li>
+
+    <hr class="sidebar-divider">
+
+    <li class="nav-item">
+      <a class="nav-link" id="{% url 'friendlist' %}" href="{% url 'friendlist' %}">
+        <i id="friend_list_icon" class="fas fa-users"></i>
+        <span>Friends</span>
+      </a>
+    </li>
+
+       <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="true" aria-controls="collapseUtilities">
               <i class="fas fa-users"></i>
@@ -78,16 +83,17 @@
                     <i class="fa fa-th-list"></i> Friends List</a>
               </div>
           </div>
-      </li>
+      </li> -->
 
       <!-- <hr class="sidebar-divider"> -->
 
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'about' %}">
-            <i class="fa fa-info-circle"></i>
-            <span>About</span></a>
+      <a class="nav-link" id="{% url 'about' %}" href="{% url 'about' %}">
+        <i id="about_icon" class="fa fa-info-circle"></i>
+        <span>About</span>
+      </a>
     </li>
 
 
