--- a/graduatetracer/tracer/templates/tracer/user/template.html
+++ b/graduatetracer/tracer/templates/tracer/user/template.html
@@ -8,15 +8,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
 
 
     <title>Graduate User</title>
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <linkhref="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
@@ -26,9 +25,13 @@
     <!-- Chatbot Css -->
     <link href="{% static 'css/chatbot.css' %}" rel="stylesheet">
 
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="side_bar_active()">
 	<!-- Page Wrapper -->
 	<div id="wrapper">
     {% include 'tracer/user/sidebar.html' %}
@@ -92,6 +95,45 @@
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
+  </script>
+
+  <script>
+    function side_bar_active(){
+      current_url = window.location.href;
+      dashboard = document.getElementById("{% url 'DashboardUser' %}");
+      jobs_available = document.getElementById("{% url 'available_jobs' %}");
+      job_experience = document.getElementById("{% url 'HomeJobExperience' %}");
+      news_feed = document.getElementById("{% url 'post-list' %}");
+      friends_list = document.getElementById("{% url 'friendlist' %}");
+      friend_list_icon = document.getElementById("friend_list_icon");
+      about = document.getElementById("{% url 'about' %}");
+
+        if (current_url == dashboard){
+          dashboard.style.background = "black";
+          dashboard.style.color = "white";
+        }else if (current_url == jobs_available){
+          jobs_available.style.background = "black";
+          jobs_available.style.color = "white";
+          jobs_available_icon.style.color = "white";
+        }else if (current_url == job_experience){
+          job_experience.style.background = "black";
+          job_experience.style.color = "white";
+          job_experience_icon.style.color = "white";
+        }else if (current_url == news_feed){
+          news_feed.style.background = "black";
+          news_feed.style.color = "white";
+          news_feed_icon.style.color = "white";
+        }else if (current_url == friends_list){
+          friends_list.style.background = "black";
+          friends_list.style.color = "white";
+          friend_list_icon.style.color = "white";
+        }else if (current_url == about){
+          about.style.background = "black";
+          about.style.color = "white";
+          about_icon.style.color = "white";
+        }
+
+    }
   </script>
 
 </body>
