kapoy daghang sayop

--- a/graduatetracer/tracer/templates/tracer/admin/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/admin/display_user_management.html
@@ -114,7 +114,17 @@
         </div>
     </div>
 </div>
-
+<script>
+  {% for message in messages %}
+  Swal.fire({
+    position: 'center',
+    icon: 'success',
+    title: '{{message}}',
+    showConfirmButton: false,
+    timer: 3000
+  })
+  {% endfor %}
+</script>
 <!-- /.container-fluid -->
 
 
