--- a/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
@@ -1,4 +1,4 @@
-{% extends 'tracer/adminreal/templates.html' %}
+{% extends 'tracer/systemadmin/templates.html' %}
 {% block content %}
 
 <style media="screen">
@@ -39,7 +39,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN SAO ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-black">STUDENT AFFAIRS OFFICE ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN APPROVER ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-black">SYSTEM ADMIN ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
