--- a/graduatetracer/tracer/templates/tracer/admin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/sidebar.html
@@ -17,7 +17,11 @@
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active sticky">
         <a class="nav-link" href="{% url 'DashboardAdmin' %}">
-            <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+          {% if user.profile_picture %}
+            <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+          {% else %}
+            <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+          {% endif %}
             <span>Dashboard</span></a>
     </li>
 
