--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load static %}
 
 <style>
   .custom-badge{
@@ -26,7 +27,11 @@
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
-                  <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                  {% if user.profile_picture %}
+                    <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                  {% else %}
+                    <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+                  {% endif %}
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
