--- a/graduatetracer/tracer/templates/tracer/adminreal/adprof.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/adprof.html
@@ -18,10 +18,14 @@
         <div class="row mb-4">
           <div class="col-lg-5 mt-4 mb-4">
             <div class="col-lg-12 mt-4 image-field">
-              <img class="img-custom-border" src="{{request.user.profile_picture.url}}" id="photo">
-              <input type="file" id="file" name="profile" hidden >
-              <label for="file" id="uploadBtn">Choose Profile</label>
-            </div>
+                {% if user.profile_picture %}
+                  <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                {% else %}
+                  <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+                {% endif %}
+                <input type="file" id="file" name="profile" hidden >
+                <label for="file" id="uploadBtn">Choose Profile</label>
+              </div>
           </div>
           <div class="col-lg-7 mt-4 mb-4">
             <div class="col-lg-11">
