--- a/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-
+{% load static %}
 <style>
   .custom-badge{
     font-size:90%;
@@ -22,28 +22,32 @@
 
         <div class="topbar-divider d-none d-sm-block text-dark"></div>
 
-          <!-- Nav Item - User Information -->
-          <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
+        <!-- Nav Item - User Information -->
+        <li class="nav-item dropdown no-arrow">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
+                {% if user.profile_picture %}
                   <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
-              </a>
-              <!-- Dropdown - User Information -->
-              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                  aria-labelledby="userDropdown">
+                {% else %}
+                  <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+                {% endif %}
+            </a>
+            <!-- Dropdown - User Information -->
+            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                aria-labelledby="userDropdown">
 
-                  <a class="dropdown-item" href="{% url 'adprof' request.user.id %}">
-                      <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                      Profile
-                  </a>
+                <a class="dropdown-item" href="{% url 'adprof' request.user.id %}">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Profile
+                </a>
 
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'logout' %}">
-                      <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
-                  </a>
-              </div>
-          </li>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'logout' %}">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
+                </a>
+            </div>
+        </li>
 
       </ul>
 
