--- a/graduatetracer/tracer/templates/tracer/admin/pending.html
+++ b/graduatetracer/tracer/templates/tracer/admin/pending.html
@@ -1,4 +1,4 @@
-{% extends 'tracer/adminreal/templates.html' %}
+{% extends 'tracer/admin/template.html' %}
 {% block content %}
 
 <style media="screen">
@@ -37,7 +37,7 @@
 <div class="container-fluid">
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
-        <div class="card-header py-3 bg-gradient-info">
+        <div class="card-header py-3 bg-c-lite-green">
             <h6 class="m-0 font-weight-bold text-black">PENDING ACCOUNTS</h6>
         </div>
         <div class="card-body">
