--- a/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
     <title>HOME</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'landingPage/assets/favicon.ico' %}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <!-- Simple line icons-->
