--- a/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
@@ -1,4 +1,4 @@
-{% extends 'tracer/admin/template.html' %}
+{% extends 'tracer/adminreal/templates.html' %}
 {% block content %}
 
 <style media="screen">
