--- a/graduatetracer/tracer/templates/tracer/firstInterface/login.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/login.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
 	<title>CTU-Ginatilan Login Page</title>
 
 	<meta charset="utf-8">
@@ -50,7 +51,7 @@
 											<input type="text" class="form-control form-control-user" name="email"
 												aria-describedby="emailHelp" placeholder="Email">
 										</div>
-										<br> 
+										<br>
 										<div class="input-group mb-2">
 											<div class="input-group-append">
 												<span class="input-group-text mb-2"><i class="fas fa-key"></i></span>
