--- a/graduatetracer/tracer/templates/tracer/firstInterface/password/password_reset.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/password/password_reset.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html>
   <head>
+    <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
   	<title>CTU Forgot Password</title>
   	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
