--- a/graduatetracer/tracer/templates/tracer/firstInterface/password/password_reset_done.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/password/password_reset_done.html
@@ -2,6 +2,7 @@
 {% block content %}
 <html>
   <head>
+    <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
   	<title>CTU Password Reset Done </title>
   	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
