--- a/graduatetracer/tracer/templates/tracer/firstInterface/register.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/register.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
 	<title>CTU-Ginatilan Register Page</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
