--- a/graduatetracer/tracer/templates/tracer/firstInterface/templates.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/templates.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
     <title>HOME</title>
 
     <!-- Custom fonts for this template-->
