current_update for today

--- a/graduatetracer/tracer/templates/tracer/adminreal/create_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/create_user_management.html
@@ -23,7 +23,7 @@
   </style>
   <div class="container">
     <div class="card o-hidden mt-3 border-0 shadow-sm ">
-      <div class="card-header  h3 bg-c-lite-green text-black">
+      <div class="card-header  h3 bg-gradient-info text-black">
         <div class="card-title">
           Admin Creation
         </div>
@@ -95,7 +95,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-lg-6">
-              <button type="submit" value="Register" class="btn bg-c-lite-green text-white btn-block">
+              <button type="submit" value="Register" class="btn bg-gradient-info text-white btn-block">
                   <span class="icon text-white">
                       <i class="fas fa-check"></i>
                   </span>
