--- a/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
@@ -38,7 +38,7 @@
 <div class="container-fluid">
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
-        <div class="card-header py-3 bg-c-lite-green">
+        <div class="card-header py-3 bg-gradient-info">
             <h6 class="m-0 font-weight-bold text-black">ADMIN SAO ACCOUNTS</h6>
         </div>
         <div class="card-body">
@@ -75,7 +75,7 @@
 
             </div>
         </div>
-        <div class="card-header py-3 bg-c-lite-green">
+        <div class="card-header py-3 bg-gradient-info">
             <h6 class="m-0 font-weight-bold text-black">ADMIN APPROVER ACCOUNTS</h6>
         </div>
         <div class="card-body">
