--- a/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
@@ -14,10 +14,13 @@
     <!-- Divider -->
     <hr class="sidebar-divider my-0 sticky">
 
-    <!-- Nav Item - Dashboard -->
     <li class="nav-item active sticky">
         <a class="nav-link" href="{% url 'admindash' %}">
-            <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+          {% if user.profile_picture %}
+            <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+          {% else %}
+            <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+          {% endif %}
             <span>Dashboard</span></a>
     </li>
 
@@ -29,23 +32,10 @@
         Interface
     </div>
 
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-            <i class="fas fa-bullhorn"></i>
-            <span>Announcements</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="{% url 'addannounce' %}">Post</a>
-                <a class="collapse-item" href="{% url 'displayannounce' %}">Display</a>
-            </div>
-        </div>
-    </li>
     <!-- Nav Item - Charts -->
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-            <i class="fas fa-graduation-cap"></i>
+            <i class="fas fa-users"></i>
             <span>Admin Management</span>
         </a>
         <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -56,13 +46,27 @@
         </div>
     </li>
 
+    <!-- Nav Item - Pages Collapse Menu -->
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            <i class="fas fa-poll"></i>
+            <span>Reports</span>
+        </a>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="{% url 'school_report' %}">School Reports</a>
+
+            </div>
+        </div>
+    </li>
+
     <!-- Divider -->
     <hr class="sidebar-divider sticky">
 
     <!-- Heading -->
-    <div class="sidebar-heading sticky">
+    <!-- <div class="sidebar-heading sticky">
         Addons
-    </div>
+    </div> -->
     <!-- Nav Item - Pages Collapse Menu -->
     <!-- <li class="nav-item sticky">
         <a class="nav-link" href="{% url 'job_requests' %}">
@@ -71,14 +75,14 @@
     </li> -->
 
     <!-- Nav Item - Charts -->
-    <li class="nav-item sticky">
+    <!-- <li class="nav-item sticky">
         <a class="nav-link" href="{% url 'user' %}">
             <i class="fas fa-users"></i>
             <span>User Graduates</span></a>
-    </li>
+    </li> -->
 
     <!-- Divider -->
-    <hr class="sidebar-divider d-none d-md-block sticky">
+    <!-- <hr class="sidebar-divider d-none d-md-block sticky"> -->
 
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline sticky">
