--- a/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-
+{% load static %}
 <style>
   .custom-badge{
     font-size:90%;
@@ -24,11 +24,15 @@
 
           <!-- Nav Item - User Information -->
           <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
-                  <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
-              </a>
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
+              {% if user.profile_picture %}
+                <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+              {% else %}
+                <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+              {% endif %}
+          </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown">
