--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -2,88 +2,212 @@
 {% load static %}
 {% block content %}
 
-<div class="container-fluid mt-0 h-100 ">
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-10 mt-5 mb-5">
-            <div class="card pt-0 pr-0 pl-0 pb-2 bg-gradient-light ">
+<style media="screen">
+  body{
+    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+  }
+  .emp-profile{
+      padding: 3%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      border-radius: 0.5rem;
+      background: #fff;
+  }
+  .profile-img{
+      text-align: center;
+  }
+  .profile-img img{
+      width: 70%;
+      height: 100%;
+  }
+  .profile-img .file {
+      position: relative;
+      overflow: hidden;
+      margin-top: -20%;
+      width: 70%;
+      border: none;
+      border-radius: 0;
+      font-size: 15px;
+      background: #212529b8;
+  }
+  .profile-img .file input {
+      position: absolute;
+      opacity: 0;
+      right: 0;
+      top: 0;
+  }
+  .profile-head h5{
+      color: #333;
+  }
+  .profile-head h6{
+      color: #A9A9A9;
+  }
+  .profile-head .nav-tabs{
+      margin-bottom:5%;
+  }
+  .profile-head .nav-tabs .nav-link{
+      color: #938C8C;
+      font-weight:600;
+      border: none;
+  }
+  .profile-head .nav-tabs .nav-link.active{
+      border: none;
+      border-bottom:2px solid #0062cc;
+  }
+  .profile-work{
+      padding: 14%;
+      margin-top: -15%;
+  }
+  .profile-work a{
+      font-size: 12px;
+      color: #818182;
+      font-weight: 600;
+      margin-top: 10%;
+  }
+  .profile-work p{
+      text-decoration: none;
+      color: #495057;
+      font-weight: 600;
+      font-size: 14px;
+  }
+  .profile-work p{
+    text-decoration: none;
+    color: #495057;
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .profile-work p{
+      list-style: none;
+  }
+  .profile-tab label{
+      font-weight: 600;
+
+  .profile-tab label{
+      font-weight: 600;
+  }
+  .profile-tab p{
+      font-weight: 600;
+      color: #0062cc;
+  }
+</style>
+
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container emp-profile">
             <form method="POST" action="{% url 'DisplayGradInfo' %}">
-                {% csrf_token %}
-                    <div class="card-header bg-c-lite-green text-black ">
-                        <div class="row">
-                            <div class="col-lg-12 mt-2 ml-4 text-center profile-pic-div">
-                                <img class="img-profile rounded-circle shadow-sm" src="{{user.profile_picture.url}}" width=" 100" height="100" alt="User-Profile-Image" id="photo">
-                            </div>
+              {% csrf_token %}
+                <div class="row">
+                    <div class="col-md-4">
+                      <div class="col-lg-12 mt-2 ml-4 text-center profile-pic-div">
+                          <img class="img-profile rounded-circle shadow-sm" src="{{user.profile_picture.url}}" width=" 100" height="100" alt="User-Profile-Image" id="photo">
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="profile-head">
+                                    <h5>
+                                        {{user.first_name}} {{user.middle_name}} {{user.last_name}}
+                                    </h5>
+                                    <h6>
+                                        {{user.email}}
+                                    </h6>
+                                    <br>
+
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Status</a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="row ">
-                            <div class="col-lg-8">
-                                <p class="pt-3">Email Address: {{user.email}}</p>
-                                <h6>Date Created: {{user.timestamp}}</h6>
+                    </div>
+                    <div class="col-md-2">
+                        <a href="{% url 'UpdateGradInfo' user.id %}" button type="button" class="btn btn-outline-warning btn-sm text-dark "><i class="fas fa-user-edit"></i> Edit Information </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="profile-work">
+                            <p>Name: &nbsp;&nbsp;{{user.first_name}} {{user.middle_name}} {{user.last_name}}</p>
+                            <p>Course Graduated: &nbsp;&nbsp;{{user.course_type}}</p>
+                            <p>School Graduated: &nbsp;&nbsp{{user.school}}</p>
+                            <p>ID Number: &nbsp;&nbsp{{user.IDNum}}</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="tab-content profile-tab" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Gender</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.gender}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Birthdate</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.birth_date}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Age</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.age}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Address</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.address}}</p>
+                                            </div>
+                                        </div>
                             </div>
-                            <div class="col-lg-4">
-                              <div class="text-right pt-5">
-                                <a href="{% url 'UpdateGradInfo' user.id %}" button type="button" class="btn btn-outline-warning btn-sm text-dark "><i class="fas fa-user-edit"></i> Edit Information </a>
-                              </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Year Graduated</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.date_graduated}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Status</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.employment_status}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Skills</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.skill}}</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Job Description</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.job_description}}</p>
+                                            </div>
+                                        </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card-body pl-4">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p>Contact Number: {{user.contact_number}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p>Name: {{user.first_name}} {{user.middle_name}} {{user.last_name}}</p>
-                            </div>
-                            <div class="col-lg-7 ">
-                                <p>Course Graduated: {{user.course_type}}</p>
-                            </div>
-                            <div class="col-lg-7 ">
-                                <p>School: {{user.school}}</p>
-                            </div>
-
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p>Gender: {{user.gender}}</p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>Year Graduated: {{user.date_graduated}}</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p>Birth Date: {{user.birth_date}}</p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>Job Description: {{user.job_description}}</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p>Age: {{user.age}}</p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>Status: {{user.employment_status}}</p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>Address: {{user.address}}</p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>Skills: {{user.skill}}</p>
-                            </div>
-                        </div>
-
-                    </div>
-
+                </div>
             </form>
-            </div>
-
         </div>
-    </div>
-</div>
-    {% endblock %}
+{% endblock %}
