--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -14,7 +14,11 @@
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
       <a class="nav-link" id="{% url 'DashboardUser' %}" href="{% url 'DashboardUser' %}">
-        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+        {% if user.profile_picture %}
+          <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+        {% else %}
+          <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+        {% endif %}
         <span>Dashboard</span>
       </a>
     </li>
