--- a/graduatetracer/tracer/templates/tracer/admin/advertise.html
+++ b/graduatetracer/tracer/templates/tracer/admin/advertise.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-sm-12 col-md-2 col-lg-1">
               <h6 class="text-dark">Add</h6>
-              <button class="btn bg-c-lite-green text-white" type="button" data-toggle="modal" data-target="#exampleModalCenter" name="button"><i class="fas fa-plus"></i></button>
+              <button class="btn bg-c-lite-green text-black" type="button" data-toggle="modal" data-target="#exampleModalCenter" name="button"><i class="fas fa-plus"></i></button>
             </div>
           </div>
 
@@ -147,10 +147,10 @@
             <div class="row">
               <div class="col-lg-6 mb-2">
                 <input type="hidden" name="form_type" value="ads_form">
-                <button class="btn btn-block text-white bg-c-lite-green active" role="button" aria-pressed="true" type="submit">Post Job</button>
+                <button class="btn btn-block text-black bg-c-lite-green active" role="button" aria-pressed="true" type="submit">Post Job</button>
               </div>
               <div class="col-lg-6 mb-2">
-                <a class="btn btn-block text-white bg-gradient-info active" href="{% url 'browser' %}">Browse Jobs</a>
+                <a class="btn btn-block text-black bg-gradient-info active" href="{% url 'browser' %}">Browse Jobs</a>
               </div>
             </div>
           </div>
