--- a/graduatetracer/tracer/templates/tracer/admin/announcement.html
+++ b/graduatetracer/tracer/templates/tracer/admin/announcement.html
@@ -30,8 +30,8 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-lg-6">
-              <button type="submit" class="btn bg-c-lite-green text-white btn-block">
-                  <span class="icon text-white">
+              <button type="submit" class="btn bg-c-lite-green text-black btn-block">
+                  <span class="icon text-black">
                       <i class="fas fa-check"></i>
                   </span>
                   <span class="text">Save</span>
