--- a/graduatetracer/tracer/templates/tracer/admin/browse.html
+++ b/graduatetracer/tracer/templates/tracer/admin/browse.html
@@ -88,6 +88,16 @@
         </select>
       </div>
       <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
+        <select id="query0" class="form-control" name="">
+          <option value="">Address</option>
+        {% for query in query_title %}
+          {% if query %}
+          <option value="{{query}}">{{query}}</option>
+          {% endif %}
+        {% endfor %}
+        </select>
+      </div>
+      <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
         <select id="query1" class="form-control" name="">
           <option value="">Category</option>
         {% for query in query_category %}
@@ -116,7 +126,7 @@
             <th class="th-w-20" style="white-space: nowrap">Job Name</th>
             <th class="th-w-20" style="white-space: nowrap">Category</th>
             <th class="th-w-20" style="white-space: nowrap">Salary</th>
-            <th class="th-w-10" style="white-space: nowrap">Date Created</th>
+            <th class="th-w-10" style="white-space: nowrap">Address</th>
             <th class="th-w-10" style="white-space: nowrap">Option</th>
           </tr>
       </thead>
