changing fonts color in admin

--- a/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
@@ -111,14 +111,14 @@
                           src="{% static 'img/visualizer.svg'  %}" alt="Dashboard-Visualizer">
                   </div>
                   <p>
-                    <font size="4" face="arial" color="black">
+                    <font size="4" face="Calibri" color="black">
                     Recommender System aims to lessen unemployment among college graduates with its
                      easy to navigate features and wide array of available jobs ranging from information
                      technology to industrial technology related work.
-                   </font></p>
+                  </font></p>
 
                   <p>
-                    <font size="4" face="arial" color="black">
+                    <font size="4" face="Calibri" color="black">
                     Hunting for jobs has never been this easy. No more transportation costs
                     and walking under the heat of the sun to look for companies looking for
                     qualified workers like you. Recommender System brings to you opportunities
@@ -137,13 +137,16 @@
                         <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
                     </div>
                     <div class="card-body">
-                      <p>To help lessen unemployment among college graduates, you can give them job opportunities
+                      <p>
+                        <font size="4" face="Calibri" color="black">
+                        To help lessen unemployment among college graduates, you can give them job opportunities
                         by adding available jobs at <a target="_blank" rel="nofollow" href="{% url 'advertise' %}">advertise</a> and
                         to view all the jobs available you can view it on <a target="_blank" rel="nofollow" href="{% url 'browser' %}">browse</a> jobs.
                         You can also view the preferred jobs of graduates in <a target="_blank" rel="nofollow" href="#">job requests</a>.</p>
                         POST and GET /<a target="_blank" rel="nofollow" href="{% url 'advertise' %}"> Advertise </a>and
                         <a target="_blank" rel="nofollow" href="{% url 'browser' %}"> Browse Jobs &rarr;</a> <br>
                         Graduates<a target="_blank" rel="nofollow" href="{% url 'job_requests' %}"> Job Requests &rarr;</a>
+                      </font></p>
                     </div>
                 </div>
             </div>
